# pharmacast-ai

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt
apps/: __init__.py
apps/forecast_service/: Dockerfile  __init__.py
apps/llm_service/: __init__.py  requirements.txt
docs/contracts/: automatic-upload-backtest.md  backend-forecast-tightening-contract.md  backend-upload-backtest-integration.md  forecast-service-foundation.md  frontend-forecast-display-contract.md  frontend-upload-backtest-readiness.md  llm-service-real-implementation.md  prophet-forecast-interval-fix.md  prophet-forecasting-real-implementation.md  xgboost-forecasting-backend-contract.md
docs/prd/: forecast-service-foundation.md  llm-service-real-implementation.md  prophet-forecasting-real-implementation.md
forecasting/: __init__.py  backtest.py  backtest_batch.py  backtest_core.py  data.py  exceptions.py  metrics.py  model.py  reporting.py
pharmaforecast_backtesting/: README.md  backtest_manifest.csv  generation_summary.json  pharmaforecast_test_dispensing_v2 copy.csv  test_01_next_1_period_actual.csv  test_02_next_2_periods_actual.csv  test_03_next_4_periods_actual.csv  test_03_next_4_periods_train.csv
pharmaforecast_backtesting/rolling_origin/: rolling_origin_manifest.csv  step_01_actual.csv  step_01_train.csv  step_02_actual.csv  step_02_train.csv  step_03_actual.csv  (+47 more)
plans/: forecast-service-foundation.md  llm-service-real-implementation.md  prophet-forecast-interval-fix.md  prophet-forecasting-real-implementation.md
shared/: __init__.py  grok_client.py  validators.py
(+44 files in other folders)
